[package]
name = "elikoga-textsynth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.0"
derive_builder = "0.11.2"
futures = "0.3.21"
openssl = { version = "0.10.41", features = ["vendored"] }
reqwest = { version = "0.11.11", features = ["json","stream"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
serde_with = "2.0.0"
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.31"
tokio = { version = "1.20.1", features = ["full"] }
